src/objects/Card_Product__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <label>Active</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Card Product</relationshipLabel>
        <relationshipName>Card_Product</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Record_Id__c</fullName>
        <externalId>true</externalId>
        <label>Record Id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>gpaAuthAllowed__c</fullName>
        <label>gpaAuthAllowed</label>
        <picklist>
            <picklistValues>
                <fullName>TRUE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FALSE</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Card Product</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Record_Id__c</columns>
        <columns>Active__c</columns>
        <columns>gpaAuthAllowed__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Card Product Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Card Product</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>